Alignment of linux with the pre-release

--- a/agency/linux/arch/arm/configs/rpi4_defconfig
+++ b/agency/linux/arch/arm/configs/rpi4_defconfig
@@ -462,10 +462,12 @@ CONFIG_ARM_PATCH_IDIV=y
 CONFIG_AEABI=y
 # CONFIG_OABI_COMPAT is not set
 CONFIG_HAVE_ARCH_PFN_VALID=y
-# CONFIG_HIGHMEM is not set
+CONFIG_HIGHMEM=y
+CONFIG_HIGHPTE=y
 # CONFIG_CPU_SW_DOMAIN_PAN is not set
 CONFIG_HW_PERF_EVENTS=y
 CONFIG_ARCH_WANT_GENERAL_HUGETLB=y
+# CONFIG_ARM_MODULE_PLTS is not set
 CONFIG_FORCE_MAX_ZONEORDER=13
 CONFIG_ALIGNMENT_TRAP=y
 # CONFIG_UACCESS_WITH_MEMCPY is not set
@@ -581,6 +583,7 @@ CONFIG_ARM_CRYPTO=y
 #
 # CONFIG_OPROFILE is not set
 CONFIG_HAVE_OPROFILE=y
+# CONFIG_KPROBES is not set
 # CONFIG_JUMP_LABEL is not set
 CONFIG_UPROBES=y
 CONFIG_HAVE_EFFICIENT_UNALIGNED_ACCESS=y
@@ -626,6 +629,7 @@ CONFIG_ARCH_OPTIONAL_KERNEL_RWX_DEFAULT=y
 CONFIG_ARCH_HAS_STRICT_KERNEL_RWX=y
 # CONFIG_STRICT_KERNEL_RWX is not set
 CONFIG_ARCH_HAS_STRICT_MODULE_RWX=y
+CONFIG_STRICT_MODULE_RWX=y
 CONFIG_ARCH_HAS_PHYS_TO_DMA=y
 CONFIG_REFCOUNT_FULL=y
 
@@ -638,7 +642,15 @@ CONFIG_PLUGIN_HOSTCC=""
 CONFIG_HAVE_GCC_PLUGINS=y
 CONFIG_RT_MUTEXES=y
 CONFIG_BASE_SMALL=0
-# CONFIG_MODULES is not set
+CONFIG_MODULES=y
+# CONFIG_MODULE_FORCE_LOAD is not set
+CONFIG_MODULE_UNLOAD=y
+# CONFIG_MODULE_FORCE_UNLOAD is not set
+# CONFIG_MODVERSIONS is not set
+# CONFIG_MODULE_SRCVERSION_ALL is not set
+# CONFIG_MODULE_SIG is not set
+# CONFIG_MODULE_COMPRESS is not set
+# CONFIG_TRIM_UNUSED_KSYMS is not set
 CONFIG_MODULES_TREE_LOOKUP=y
 CONFIG_BLOCK=y
 CONFIG_LBDAF=y
@@ -887,6 +899,7 @@ CONFIG_XPS=y
 # CONFIG_CGROUP_NET_CLASSID is not set
 CONFIG_NET_RX_BUSY_POLL=y
 CONFIG_BQL=y
+# CONFIG_BPF_JIT is not set
 CONFIG_NET_FLOW_LIMIT=y
 
 #
@@ -928,7 +941,7 @@ CONFIG_BT_HCIUART_H4=y
 # CONFIG_BT_HCIUART_BCSP is not set
 # CONFIG_BT_HCIUART_ATH3K is not set
 # CONFIG_BT_HCIUART_LL is not set
-CONFIG_BT_HCIUART_3WIRE=y
+# CONFIG_BT_HCIUART_3WIRE is not set
 # CONFIG_BT_HCIUART_INTEL is not set
 CONFIG_BT_HCIUART_BCM=y
 # CONFIG_BT_HCIUART_QCA is not set
@@ -1012,6 +1025,7 @@ CONFIG_ALLOW_DEV_COREDUMP=y
 # CONFIG_DEBUG_DRIVER is not set
 # CONFIG_DEBUG_DEVRES is not set
 # CONFIG_DEBUG_TEST_DRIVER_REMOVE is not set
+# CONFIG_TEST_ASYNC_DRIVER_PROBE is not set
 CONFIG_GENERIC_CPU_AUTOPROBE=y
 CONFIG_REGMAP=y
 CONFIG_REGMAP_MMIO=y
@@ -1092,6 +1106,8 @@ CONFIG_BLK_DEV_RAM_SIZE=4096
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
 # CONFIG_PCI_ENDPOINT_TEST is not set
+# CONFIG_DRV8703 is not set
+# CONFIG_DS1050 is not set
 # CONFIG_C2PORT is not set
 
 #
@@ -1498,7 +1514,7 @@ CONFIG_BRCMFMAC_PROTO_BCDC=y
 CONFIG_BRCMFMAC_SDIO=y
 # CONFIG_BRCMFMAC_USB is not set
 # CONFIG_BRCMFMAC_PCIE is not set
-# CONFIG_BRCM_TRACING is not set
+CONFIG_BRCM_TRACING=y
 # CONFIG_BRCMDBG is not set
 # CONFIG_WLAN_VENDOR_CISCO is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
@@ -1620,6 +1636,12 @@ CONFIG_SERIO_LIBPS2=y
 #
 # Character devices
 #
+CONFIG_BRCM_CHAR_DRIVERS=y
+CONFIG_BCM2708_VCMEM=y
+CONFIG_BCM_VCIO=y
+CONFIG_BCM_VC_SM=y
+CONFIG_BCM2835_DEVGPIOMEM=y
+CONFIG_RPIVID_MEM=y
 CONFIG_TTY=y
 CONFIG_VT=y
 CONFIG_CONSOLE_TRANSLATIONS=y
@@ -1667,7 +1689,8 @@ CONFIG_SERIAL_OF_PLATFORM=y
 # Non-8250 serial port support
 #
 # CONFIG_SERIAL_AMBA_PL010 is not set
-# CONFIG_SERIAL_AMBA_PL011 is not set
+CONFIG_SERIAL_AMBA_PL011=y
+# CONFIG_SERIAL_AMBA_PL011_CONSOLE is not set
 # CONFIG_SERIAL_EARLYCON_ARM_SEMIHOST is not set
 # CONFIG_SERIAL_MAX3100 is not set
 # CONFIG_SERIAL_MAX310X is not set
@@ -1774,6 +1797,7 @@ CONFIG_I2C_BCM2835=y
 #
 # Other I2C/SMBus bus drivers
 #
+# CONFIG_I2C_STUB is not set
 # CONFIG_I2C_SLAVE is not set
 # CONFIG_I2C_DEBUG_CORE is not set
 # CONFIG_I2C_DEBUG_ALGO is not set
@@ -1809,6 +1833,7 @@ CONFIG_SPI_BCM2835AUX=y
 # SPI Protocol Masters
 #
 # CONFIG_SPI_SPIDEV is not set
+# CONFIG_SPI_LOOPBACK_TEST is not set
 # CONFIG_SPI_TLE62X0 is not set
 # CONFIG_SPI_SLAVE is not set
 # CONFIG_SPMI is not set
@@ -1957,6 +1982,7 @@ CONFIG_THERMAL_GOV_STEP_WISE=y
 # CONFIG_THERMAL_GOV_POWER_ALLOCATOR is not set
 # CONFIG_CPU_THERMAL is not set
 # CONFIG_THERMAL_EMULATION is not set
+# CONFIG_SUNXI_THS is not set
 # CONFIG_QORIQ_THERMAL is not set
 
 #
@@ -2785,8 +2811,15 @@ CONFIG_VIRTIO_MENU=y
 CONFIG_STAGING=y
 # CONFIG_PRISM2_USB is not set
 # CONFIG_COMEDI is not set
+# CONFIG_RTL8192U is not set
+# CONFIG_RTLLIB is not set
+# CONFIG_RTL8723BS is not set
 # CONFIG_R8712U is not set
+# CONFIG_R8188EU is not set
+# CONFIG_R8822BE is not set
 # CONFIG_RTS5208 is not set
+# CONFIG_VT6655 is not set
+# CONFIG_VT6656 is not set
 # CONFIG_FB_SM750 is not set
 # CONFIG_FB_XGI is not set
 
@@ -2800,6 +2833,7 @@ CONFIG_STAGING=y
 # Android
 #
 # CONFIG_STAGING_BOARD is not set
+# CONFIG_LTE_GDM724X is not set
 # CONFIG_DGNC is not set
 # CONFIG_GS_FPGABOOT is not set
 # CONFIG_UNISYSSPAR is not set
@@ -3203,6 +3237,7 @@ CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 # CONFIG_CRYPTO_MCRYPTD is not set
 CONFIG_CRYPTO_AUTHENC=y
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
@@ -3457,6 +3492,7 @@ CONFIG_ARCH_HAS_DEBUG_VIRTUAL=y
 # CONFIG_DEBUG_VIRTUAL is not set
 CONFIG_DEBUG_MEMORY_INIT=y
 # CONFIG_DEBUG_PER_CPU_MAPS is not set
+# CONFIG_DEBUG_HIGHMEM is not set
 CONFIG_ARCH_HAS_KCOV=y
 CONFIG_CC_HAS_SANCOV_TRACE_PC=y
 # CONFIG_KCOV is not set
@@ -3548,6 +3584,7 @@ CONFIG_PROBE_EVENTS=y
 # CONFIG_TRACEPOINT_BENCHMARK is not set
 # CONFIG_RING_BUFFER_BENCHMARK is not set
 # CONFIG_RING_BUFFER_STARTUP_TEST is not set
+# CONFIG_PREEMPTIRQ_DELAY_TEST is not set
 # CONFIG_TRACE_EVAL_MAP_FILE is not set
 CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_DMA_API_DEBUG is not set
@@ -3558,6 +3595,7 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_BACKTRACE_SELF_TEST is not set
 # CONFIG_RBTREE_TEST is not set
 # CONFIG_INTERVAL_TREE_TEST is not set
+# CONFIG_PERCPU_TEST is not set
 # CONFIG_ATOMIC64_SELFTEST is not set
 # CONFIG_TEST_HEXDUMP is not set
 # CONFIG_TEST_STRING_HELPERS is not set
@@ -3570,10 +3608,15 @@ CONFIG_RUNTIME_TESTING_MENU=y
 # CONFIG_TEST_RHASHTABLE is not set
 # CONFIG_TEST_HASH is not set
 # CONFIG_TEST_IDA is not set
+# CONFIG_TEST_LKM is not set
+# CONFIG_TEST_USER_COPY is not set
+# CONFIG_TEST_BPF is not set
 # CONFIG_FIND_BIT_BENCHMARK is not set
 # CONFIG_TEST_FIRMWARE is not set
 # CONFIG_TEST_SYSCTL is not set
 # CONFIG_TEST_UDELAY is not set
+# CONFIG_TEST_STATIC_KEYS is not set
+# CONFIG_TEST_KMOD is not set
 # CONFIG_MEMTEST is not set
 # CONFIG_BUG_ON_DATA_CORRUPTION is not set
 # CONFIG_SAMPLES is not set
@@ -3605,3 +3648,16 @@ CONFIG_SOOLINK_PLUGIN_WLAN=y
 CONFIG_SOOLINK_PLUGIN_ETHERNET=y
 CONFIG_SOOLINK_PLUGIN_BLUETOOTH=y
 # CONFIG_SOOLINK_PLUGIN_LOOPBACK is not set
+
+#
+# Smart Object Oriented subsystem
+#
+# CONFIG_VDUMMY_BACKEND is not set
+CONFIG_VUART_BACKEND=y
+# CONFIG_VINPUT_BACKEND is not set
+# CONFIG_VDOGA12V6NM_BACKEND is not set
+# CONFIG_VWEATHER_BACKEND is not set
+# CONFIG_VUIHANDLER_BACKEND is not set
+# CONFIG_VNETSTREAM_BACKEND is not set
+# CONFIG_VLEDS_BACKEND is not set
+# CONFIG_VFB_BACKEND is not set
