--- a/agency/rootfs/board/rpi4/rootfs_overlay/etc/bluetooth/main.conf
+++ b/agency/rootfs/board/rpi4/rootfs_overlay/etc/bluetooth/main.conf
@@ -2,7 +2,7 @@
 
 # Default adapter name
 # Defaults to 'BlueZ X.YZ'
-#Name = BlueZ
+Name = soo-rpi4-bt
 
 # Default device class. Only the major and minor device class bits are
 # considered. Defaults to '0x000000'.
@@ -11,7 +11,7 @@
 # How long to stay in discoverable mode before going back to non-discoverable
 # The value is in seconds. Default is 180, i.e. 3 minutes.
 # 0 = disable timer, i.e. stay discoverable forever
-#DiscoverableTimeout = 0
+DiscoverableTimeout = 0
 
 # How long to stay in pairable mode before going back to non-discoverable
 # The value is in seconds. Default is 0.
