Added a more sophisticated .gitignore ;-)

--- a/.gitignore
+++ b/.gitignore
@@ -1,48 +1,1 @@
-# Ignore all generated files :
-*.[oa]
-*.cmd
-*.tmp*
-*.log
-*.ko
-*.mk
-*.builtin
-*.dtb
-*.su
-
-**/doxy/**
-**/generated/**
-**/optee_os/out/**
-
-#vmlinux*
-uImage*
-domains*
-modules.order
-vmlinux.*dom*
-**/include/config/**
-**/qemu/**
-
-# Backup files
-*~
-*.d
-
-# Hidden files
-.*
-
-# Eclipse stuff
-*.launch
-
-agency/rootfs/build/**
-agency/rootfs/host/**
-agency/rootfs/images/**
-agency/rootfs/target/**
-
-
-# except the followings:
-!.gitignore #Don't ignore the ignore file ;-)
-!*.tmpl #TaMPLate files for the man documentation
-!buildroot/**
-!buildroot/docs/manual/*.mk
-!agency/rootfs/*.mk
-!agency/rootfs/package/**
-!agency/rootfs/board/**/*.d
-
+/.metadata/
