--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -555,10 +555,10 @@ BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 #
 # BR2_PACKAGE_BROTLI is not set
 # BR2_PACKAGE_BZIP2 is not set
-BR2_PACKAGE_GZIP=y
+# BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_LRZIP is not set
-BR2_PACKAGE_LZ4=y
-BR2_PACKAGE_LZIP=y
+# BR2_PACKAGE_LZ4 is not set
+# BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
 # BR2_PACKAGE_PIGZ is not set
@@ -566,7 +566,7 @@ BR2_PACKAGE_LZIP=y
 # BR2_PACKAGE_UNRAR is not set
 # BR2_PACKAGE_UNZIP is not set
 # BR2_PACKAGE_XZ is not set
-BR2_PACKAGE_ZIP=y
+# BR2_PACKAGE_ZIP is not set
 # BR2_PACKAGE_ZSTD is not set
 
 #
