--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -180,7 +180,10 @@ BR2_GNU_MIRROR="http://ftp.gnu.org/pub/gnu"
 BR2_LUAROCKS_MIRROR="http://rocks.moonscript.org"
 BR2_CPAN_MIRROR="http://cpan.metacpan.org"
 BR2_JLEVEL=0
-# BR2_CCACHE is not set
+BR2_CCACHE=y
+BR2_CCACHE_DIR="$(HOME)/.buildroot-ccache"
+BR2_CCACHE_INITIAL_SETUP=""
+BR2_CCACHE_USE_BASEDIR=y
 # BR2_ENABLE_DEBUG is not set
 BR2_STRIP_strip=y
 BR2_STRIP_EXCLUDE_FILES=""
@@ -455,7 +458,8 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_INDIVIDUAL_BINARIES is not set
-# BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
+BR2_PACKAGE_BUSYBOX_WATCHDOG=y
+BR2_PACKAGE_BUSYBOX_WATCHDOG_PERIOD="5"
 BR2_PACKAGE_SKELETON=y
 BR2_PACKAGE_HAS_SKELETON=y
 BR2_PACKAGE_PROVIDES_SKELETON="skeleton-init-sysv"
@@ -611,13 +615,13 @@ BR2_PACKAGE_OPROFILE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PAX_UTILS is not set
 BR2_PACKAGE_PTM2HUMAN_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PTM2HUMAN is not set
-BR2_PACKAGE_PV=y
-BR2_PACKAGE_RAMSMP=y
-BR2_PACKAGE_RAMSPEED=y
+# BR2_PACKAGE_PV is not set
+# BR2_PACKAGE_RAMSMP is not set
+# BR2_PACKAGE_RAMSPEED is not set
 # BR2_PACKAGE_RT_TESTS is not set
 # BR2_PACKAGE_SPIDEV_TEST is not set
-BR2_PACKAGE_STRACE=y
-BR2_PACKAGE_STRESS=y
+# BR2_PACKAGE_STRACE is not set
+# BR2_PACKAGE_STRESS is not set
 # BR2_PACKAGE_STRESS_NG is not set
 
 #
@@ -631,8 +635,6 @@ BR2_PACKAGE_TCF_AGENT_ARCH_SUPPORTS=y
 BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TRINITY is not set
 # BR2_PACKAGE_UCLIBC_NG_TEST is not set
-BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
-# BR2_PACKAGE_VALGRIND is not set
 # BR2_PACKAGE_VMTOUCH is not set
 # BR2_PACKAGE_WHETSTONE is not set
 
@@ -655,15 +657,18 @@ BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_FINDUTILS is not set
 # BR2_PACKAGE_FLEX is not set
 # BR2_PACKAGE_GAWK is not set
-# BR2_PACKAGE_GETTEXT is not set
+BR2_PACKAGE_GETTEXT=y
+BR2_PACKAGE_HAS_GETTEXT=y
+BR2_PACKAGE_PROVIDES_GETTEXT="gettext-tiny"
 BR2_PACKAGE_PROVIDES_HOST_GETTEXT="host-gettext-tiny"
+BR2_PACKAGE_GETTEXT_TINY=y
 # BR2_PACKAGE_GIT is not set
 # BR2_PACKAGE_GIT_CRYPT is not set
 # BR2_PACKAGE_GPERF is not set
 # BR2_PACKAGE_GREP is not set
 # BR2_PACKAGE_JO is not set
 # BR2_PACKAGE_JQ is not set
-# BR2_PACKAGE_LIBTOOL is not set
+BR2_PACKAGE_LIBTOOL=y
 # BR2_PACKAGE_MAKE is not set
 # BR2_PACKAGE_PATCH is not set
 # BR2_PACKAGE_PKGCONF is not set
@@ -1121,50 +1126,69 @@ BR2_PACKAGE_OPENJDK_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_PERL is not set
 # BR2_PACKAGE_PHP is not set
-BR2_PACKAGE_PYTHON=y
-# BR2_PACKAGE_PYTHON_PY_ONLY is not set
-BR2_PACKAGE_PYTHON_PYC_ONLY=y
-# BR2_PACKAGE_PYTHON_PY_PYC is not set
+# BR2_PACKAGE_PYTHON is not set
+BR2_PACKAGE_PYTHON3=y
+# BR2_PACKAGE_PYTHON3_PY_ONLY is not set
+BR2_PACKAGE_PYTHON3_PYC_ONLY=y
+# BR2_PACKAGE_PYTHON3_PY_PYC is not set
 
 #
-# core python modules
+# core python3 modules
 #
 
 #
 # The following modules are unusual or require extra libraries
 #
-# BR2_PACKAGE_PYTHON_BZIP2 is not set
-# BR2_PACKAGE_PYTHON_BSDDB is not set
-# BR2_PACKAGE_PYTHON_CODECSCJK is not set
-# BR2_PACKAGE_PYTHON_CURSES is not set
-# BR2_PACKAGE_PYTHON_OSSAUDIODEV is not set
-# BR2_PACKAGE_PYTHON_READLINE is not set
-# BR2_PACKAGE_PYTHON_SSL is not set
-BR2_PACKAGE_PYTHON_UNICODEDATA=y
-BR2_PACKAGE_PYTHON_UCS2=y
-# BR2_PACKAGE_PYTHON_UCS4 is not set
-# BR2_PACKAGE_PYTHON_SQLITE is not set
-BR2_PACKAGE_PYTHON_PYEXPAT=y
-# BR2_PACKAGE_PYTHON_ZLIB is not set
-# BR2_PACKAGE_PYTHON_HASHLIB is not set
+# BR2_PACKAGE_PYTHON3_BZIP2 is not set
+# BR2_PACKAGE_PYTHON3_CODECSCJK is not set
+# BR2_PACKAGE_PYTHON3_CURSES is not set
+# BR2_PACKAGE_PYTHON3_DECIMAL is not set
+# BR2_PACKAGE_PYTHON3_OSSAUDIODEV is not set
+# BR2_PACKAGE_PYTHON3_READLINE is not set
+# BR2_PACKAGE_PYTHON3_SSL is not set
+BR2_PACKAGE_PYTHON3_UNICODEDATA=y
+# BR2_PACKAGE_PYTHON3_SQLITE is not set
+BR2_PACKAGE_PYTHON3_PYEXPAT=y
+# BR2_PACKAGE_PYTHON3_XZ is not set
+BR2_PACKAGE_PYTHON3_ZLIB=y
 
 #
 # External python modules
 #
 # BR2_PACKAGE_PYTHON_AENUM is not set
+# BR2_PACKAGE_PYTHON_AIOBLESCAN is not set
+# BR2_PACKAGE_PYTHON_AIOCOAP is not set
+# BR2_PACKAGE_PYTHON_AIOCONSOLE is not set
+# BR2_PACKAGE_PYTHON_AIODNS is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_CORS is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_DEBUGTOOLBAR is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_JINJA2 is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_MAKO is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_REMOTES is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_SECURITY is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_SESSION is not set
+# BR2_PACKAGE_PYTHON_AIOHTTP_SSE is not set
+# BR2_PACKAGE_PYTHON_AIOJOBS is not set
+# BR2_PACKAGE_PYTHON_AIOLOGSTASH is not set
+# BR2_PACKAGE_PYTHON_AIOMONITOR is not set
+# BR2_PACKAGE_PYTHON_AIOREDIS is not set
+# BR2_PACKAGE_PYTHON_AIORWLOCK is not set
+# BR2_PACKAGE_PYTHON_AIOSIGNAL is not set
+# BR2_PACKAGE_PYTHON_AIOZIPKIN is not set
 # BR2_PACKAGE_PYTHON_ALSAAUDIO is not set
 # BR2_PACKAGE_PYTHON_ARGH is not set
 # BR2_PACKAGE_PYTHON_ARROW is not set
+# BR2_PACKAGE_PYTHON_ASGIREF is not set
 # BR2_PACKAGE_PYTHON_ASN1CRYPTO is not set
+# BR2_PACKAGE_PYTHON_ASYNC_LRU is not set
+# BR2_PACKAGE_PYTHON_ASYNC_TIMEOUT is not set
 # BR2_PACKAGE_PYTHON_ATTRS is not set
 # BR2_PACKAGE_PYTHON_AUTOBAHN is not set
 # BR2_PACKAGE_PYTHON_AUTOMAT is not set
+# BR2_PACKAGE_PYTHON_AVRO is not set
 # BR2_PACKAGE_PYTHON_BABEL is not set
 # BR2_PACKAGE_PYTHON_BACKCALL is not set
-# BR2_PACKAGE_PYTHON_BACKPORTS_ABC is not set
-# BR2_PACKAGE_PYTHON_BACKPORTS_FUNCTOOLS_LRU_CACHE is not set
-# BR2_PACKAGE_PYTHON_BACKPORTS_SHUTIL_GET_TERMINAL_SIZE is not set
-# BR2_PACKAGE_PYTHON_BACKPORTS_SSL_MATCH_HOSTNAME is not set
 # BR2_PACKAGE_PYTHON_BCRYPT is not set
 # BR2_PACKAGE_PYTHON_BEAUTIFULSOUP4 is not set
 # BR2_PACKAGE_PYTHON_BITSTRING is not set
@@ -1178,31 +1202,34 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_CCHARDET is not set
 # BR2_PACKAGE_PYTHON_CERTIFI is not set
 # BR2_PACKAGE_PYTHON_CFFI is not set
+# BR2_PACKAGE_PYTHON_CHANNELS is not set
+# BR2_PACKAGE_PYTHON_CHANNELS_REDIS is not set
 # BR2_PACKAGE_PYTHON_CHARACTERISTIC is not set
 # BR2_PACKAGE_PYTHON_CHARDET is not set
-# BR2_PACKAGE_PYTHON_CHEETAH is not set
+# BR2_PACKAGE_PYTHON_CHEROOT is not set
+# BR2_PACKAGE_PYTHON_CHERRYPY is not set
 # BR2_PACKAGE_PYTHON_CLICK is not set
-# BR2_PACKAGE_PYTHON_COHERENCE is not set
 # BR2_PACKAGE_PYTHON_COLORAMA is not set
 # BR2_PACKAGE_PYTHON_COLORLOG is not set
-# BR2_PACKAGE_PYTHON_CONFIGOBJ is not set
 # BR2_PACKAGE_PYTHON_CONFIGSHELL_FB is not set
 # BR2_PACKAGE_PYTHON_CONSTANTLY is not set
 # BR2_PACKAGE_PYTHON_COUCHDB is not set
-# BR2_PACKAGE_PYTHON_CRC16 is not set
 # BR2_PACKAGE_PYTHON_CRCMOD is not set
 # BR2_PACKAGE_PYTHON_CRONTAB is not set
+# BR2_PACKAGE_PYTHON_CROSSBAR is not set
 # BR2_PACKAGE_PYTHON_CRYPTOGRAPHY is not set
 # BR2_PACKAGE_PYTHON_CSSSELECT is not set
 # BR2_PACKAGE_PYTHON_CSSUTILS is not set
 # BR2_PACKAGE_PYTHON_CYCLER is not set
 # BR2_PACKAGE_PYTHON_DAEMON is not set
 # BR2_PACKAGE_PYTHON_DAEMONIZE is not set
+# BR2_PACKAGE_PYTHON_DAPHNE is not set
 # BR2_PACKAGE_PYTHON_DATAPROPERTY is not set
 # BR2_PACKAGE_PYTHON_DATEUTIL is not set
 # BR2_PACKAGE_PYTHON_DECORATOR is not set
-# BR2_PACKAGE_PYTHON_DIALOG is not set
+# BR2_PACKAGE_PYTHON_DIALOG3 is not set
 # BR2_PACKAGE_PYTHON_DICTTOXML is not set
+# BR2_PACKAGE_PYTHON_DJANGO is not set
 # BR2_PACKAGE_PYTHON_DJANGO_ENUMFIELDS is not set
 # BR2_PACKAGE_PYTHON_DNSPYTHON is not set
 # BR2_PACKAGE_PYTHON_DOCKER is not set
@@ -1211,12 +1238,9 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_DOCOPT is not set
 # BR2_PACKAGE_PYTHON_DOCUTILS is not set
 # BR2_PACKAGE_PYTHON_DOMINATE is not set
-# BR2_PACKAGE_PYTHON_DPKT is not set
 # BR2_PACKAGE_PYTHON_ECDSA is not set
 # BR2_PACKAGE_PYTHON_ENGINEIO is not set
 # BR2_PACKAGE_PYTHON_ENTRYPOINTS is not set
-# BR2_PACKAGE_PYTHON_ENUM is not set
-# BR2_PACKAGE_PYTHON_ENUM34 is not set
 # BR2_PACKAGE_PYTHON_ESPTOOL is not set
 # BR2_PACKAGE_PYTHON_FALCON is not set
 # BR2_PACKAGE_PYTHON_FIRE is not set
@@ -1226,12 +1250,8 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_FLASK_JSONRPC is not set
 # BR2_PACKAGE_PYTHON_FLASK_LOGIN is not set
 # BR2_PACKAGE_PYTHON_FLASK_SQLALCHEMY is not set
-# BR2_PACKAGE_PYTHON_FLUP is not set
-# BR2_PACKAGE_PYTHON_FUNCTOOLS32 is not set
-# BR2_PACKAGE_PYTHON_FUTURE is not set
-# BR2_PACKAGE_PYTHON_FUTURES is not set
+# BR2_PACKAGE_PYTHON_FROZENLIST is not set
 # BR2_PACKAGE_PYTHON_GITDB2 is not set
-# BR2_PACKAGE_PYTHON_GOBJECT is not set
 # BR2_PACKAGE_PYTHON_GUNICORN is not set
 # BR2_PACKAGE_PYTHON_H2 is not set
 # BR2_PACKAGE_PYTHON_HIREDIS is not set
@@ -1243,7 +1263,6 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_HYPERFRAME is not set
 # BR2_PACKAGE_PYTHON_HYPERLINK is not set
 # BR2_PACKAGE_PYTHON_IBMIOTF is not set
-# BR2_PACKAGE_PYTHON_ID3 is not set
 # BR2_PACKAGE_PYTHON_IDNA is not set
 # BR2_PACKAGE_PYTHON_IFADDR is not set
 # BR2_PACKAGE_PYTHON_INCREMENTAL is not set
@@ -1251,19 +1270,20 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_INFLUXDB is not set
 # BR2_PACKAGE_PYTHON_INIPARSE is not set
 # BR2_PACKAGE_PYTHON_IOWAIT is not set
-# BR2_PACKAGE_PYTHON_IPADDR is not set
-# BR2_PACKAGE_PYTHON_IPADDRESS is not set
 # BR2_PACKAGE_PYTHON_IPTABLES is not set
-# BR2_PACKAGE_PYTHON_IPY is not set
+# BR2_PACKAGE_PYTHON_IPYTHON is not set
 # BR2_PACKAGE_PYTHON_IPYTHON_GENUTILS is not set
 # BR2_PACKAGE_PYTHON_ISO8601 is not set
 # BR2_PACKAGE_PYTHON_ITSDANGEROUS is not set
+# BR2_PACKAGE_PYTHON_JANUS is not set
 # BR2_PACKAGE_PYTHON_JARACO_CLASSES is not set
+# BR2_PACKAGE_PYTHON_JARACO_FUNCTOOLS is not set
 # BR2_PACKAGE_PYTHON_JEDI is not set
 # BR2_PACKAGE_PYTHON_JINJA2 is not set
 # BR2_PACKAGE_PYTHON_JSON_SCHEMA_VALIDATOR is not set
 # BR2_PACKAGE_PYTHON_JSONMODELS is not set
 # BR2_PACKAGE_PYTHON_JSONSCHEMA is not set
+# BR2_PACKAGE_PYTHON_KEYRING is not set
 # BR2_PACKAGE_PYTHON_KIWISOLVER is not set
 # BR2_PACKAGE_PYTHON_LIBCONFIG is not set
 # BR2_PACKAGE_PYTHON_LIBUSB1 is not set
@@ -1273,42 +1293,44 @@ BR2_PACKAGE_PYTHON_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_LOGSTASH is not set
 # BR2_PACKAGE_PYTHON_LXML is not set
 # BR2_PACKAGE_PYTHON_M2R is not set
-# BR2_PACKAGE_PYTHON_MAD is not set
 # BR2_PACKAGE_PYTHON_MAKO is not set
 # BR2_PACKAGE_PYTHON_MARKDOWN is not set
 # BR2_PACKAGE_PYTHON_MARKDOWN2 is not set
 # BR2_PACKAGE_PYTHON_MARKUPSAFE is not set
+# BR2_PACKAGE_PYTHON_MATPLOTLIB is not set
 # BR2_PACKAGE_PYTHON_MBSTRDECODER is not set
 # BR2_PACKAGE_PYTHON_MELD3 is not set
 # BR2_PACKAGE_PYTHON_MIMEPARSE is not set
 # BR2_PACKAGE_PYTHON_MISTUNE is not set
+# BR2_PACKAGE_PYTHON_MORE_ITERTOOLS is not set
 # BR2_PACKAGE_PYTHON_MSGFY is not set
 # BR2_PACKAGE_PYTHON_MSGPACK is not set
+# BR2_PACKAGE_PYTHON_MULTIDICT is not set
 # BR2_PACKAGE_PYTHON_MUTAGEN is not set
 # BR2_PACKAGE_PYTHON_MWCLIENT is not set
-# BR2_PACKAGE_PYTHON_MWSCRAPE is not set
+# BR2_PACKAGE_PYTHON_MWSCRAPE2SLOB is not set
 # BR2_PACKAGE_PYTHON_NESTED_DICT is not set
 # BR2_PACKAGE_PYTHON_NETADDR is not set
 # BR2_PACKAGE_PYTHON_NETIFACES is not set
 # BR2_PACKAGE_PYTHON_NETWORKX is not set
-# BR2_PACKAGE_PYTHON_NFC is not set
 BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
-# BR2_PACKAGE_PYTHON_NUMPY is not set
+BR2_PACKAGE_PYTHON_NUMPY=y
 # BR2_PACKAGE_PYTHON_OAUTHLIB is not set
 # BR2_PACKAGE_PYTHON_PAHO_MQTT is not set
-# BR2_PACKAGE_PYTHON_PAM is not set
 # BR2_PACKAGE_PYTHON_PARAMIKO is not set
 # BR2_PACKAGE_PYTHON_PARSO is not set
 # BR2_PACKAGE_PYTHON_PASSLIB is not set
-# BR2_PACKAGE_PYTHON_PATHLIB2 is not set
+# BR2_PACKAGE_PYTHON_PATHPY is not set
 # BR2_PACKAGE_PYTHON_PATHTOOLS is not set
 # BR2_PACKAGE_PYTHON_PATHVALIDATE is not set
 # BR2_PACKAGE_PYTHON_PERIPHERY is not set
 # BR2_PACKAGE_PYTHON_PEXPECT is not set
 # BR2_PACKAGE_PYTHON_PICKLESHARE is not set
 # BR2_PACKAGE_PYTHON_PIGPIO is not set
+BR2_PACKAGE_PYTHON_PILLOW=y
 # BR2_PACKAGE_PYTHON_PIP is not set
 # BR2_PACKAGE_PYTHON_PLY is not set
+# BR2_PACKAGE_PYTHON_PORTEND is not set
 # BR2_PACKAGE_PYTHON_POSIX_IPC is not set
 # BR2_PACKAGE_PYTHON_PRIORITY is not set
 # BR2_PACKAGE_PYTHON_PROMPT_TOOLKIT is not set
@@ -1324,11 +1346,13 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_PYASN1 is not set
 # BR2_PACKAGE_PYTHON_PYASN1_MODULES is not set
 # BR2_PACKAGE_PYTHON_PYCAIRO is not set
+# BR2_PACKAGE_PYTHON_PYCARES is not set
 # BR2_PACKAGE_PYTHON_PYCLI is not set
 # BR2_PACKAGE_PYTHON_PYCPARSER is not set
 # BR2_PACKAGE_PYTHON_PYCRYPTO is not set
 # BR2_PACKAGE_PYTHON_PYCRYPTODOMEX is not set
 # BR2_PACKAGE_PYTHON_PYDAL is not set
+# BR2_PACKAGE_PYTHON_PYDANTIC is not set
 # BR2_PACKAGE_PYTHON_PYELFTOOLS is not set
 # BR2_PACKAGE_PYTHON_PYFTPDLIB is not set
 # BR2_PACKAGE_PYTHON_PYGAME is not set
@@ -1345,14 +1369,12 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_PYOPENSSL is not set
 # BR2_PACKAGE_PYTHON_PYPARSING is not set
 # BR2_PACKAGE_PYTHON_PYPARTED is not set
-# BR2_PACKAGE_PYTHON_PYPCAP is not set
 # BR2_PACKAGE_PYTHON_PYQRCODE is not set
 
 #
 # python-pyqt5 needs Qt5
 #
 # BR2_PACKAGE_PYTHON_PYRATEMP is not set
-# BR2_PACKAGE_PYTHON_PYRO is not set
 # BR2_PACKAGE_PYTHON_PYROUTE2 is not set
 # BR2_PACKAGE_PYTHON_PYSENDFILE is not set
 # BR2_PACKAGE_PYTHON_PYSMB is not set
@@ -1360,6 +1382,7 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_PYSNMP is not set
 # BR2_PACKAGE_PYTHON_PYSNMP_MIBS is not set
 # BR2_PACKAGE_PYTHON_PYSOCKS is not set
+# BR2_PACKAGE_PYTHON_PYTABLEREADER is not set
 # BR2_PACKAGE_PYTHON_PYTABLEWRITER is not set
 # BR2_PACKAGE_PYTHON_PYTRIE is not set
 # BR2_PACKAGE_PYTHON_PYTZ is not set
@@ -1383,13 +1406,14 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_SCAPY is not set
 # BR2_PACKAGE_PYTHON_SCHEDULE is not set
 # BR2_PACKAGE_PYTHON_SDNOTIFY is not set
+# BR2_PACKAGE_PYTHON_SECRETSTORAGE is not set
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SERVICE_IDENTITY is not set
 # BR2_PACKAGE_PYTHON_SETPROCTITLE is not set
-# BR2_PACKAGE_PYTHON_SETUPTOOLS is not set
+BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_SH is not set
 # BR2_PACKAGE_PYTHON_SHUTILWHICH is not set
 # BR2_PACKAGE_PYTHON_SIMPLEGENERIC is not set
@@ -1976,7 +2000,13 @@ BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBCGICC is not set
 # BR2_PACKAGE_LIBCOAP is not set
 # BR2_PACKAGE_LIBCPPRESTSDK is not set
-# BR2_PACKAGE_LIBCURL is not set
+BR2_PACKAGE_LIBCURL=y
+# BR2_PACKAGE_LIBCURL_CURL is not set
+# BR2_PACKAGE_LIBCURL_VERBOSE is not set
+BR2_PACKAGE_LIBCURL_PROXY_SUPPORT=y
+BR2_PACKAGE_LIBCURL_COOKIES_SUPPORT=y
+BR2_PACKAGE_LIBCURL_EXTRA_PROTOCOLS_FEATURES=y
+BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBDNET is not set
 # BR2_PACKAGE_LIBEXOSIP2 is not set
 # BR2_PACKAGE_LIBFCGI is not set
@@ -2134,7 +2164,7 @@ BR2_PACKAGE_LIBBSD_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBDAEMON is not set
 # BR2_PACKAGE_LIBEE is not set
 # BR2_PACKAGE_LIBEV is not set
-# BR2_PACKAGE_LIBEVDEV is not set
+BR2_PACKAGE_LIBEVDEV=y
 # BR2_PACKAGE_LIBEVENT is not set
 BR2_PACKAGE_LIBFFI=y
 # BR2_PACKAGE_LIBGEE is not set
@@ -2349,7 +2379,10 @@ BR2_PACKAGE_CRDA=y
 # BR2_PACKAGE_DANTE is not set
 # BR2_PACKAGE_DARKHTTPD is not set
 # BR2_PACKAGE_DEHYDRATED is not set
-# BR2_PACKAGE_DHCP is not set
+BR2_PACKAGE_DHCP=y
+# BR2_PACKAGE_DHCP_SERVER is not set
+# BR2_PACKAGE_DHCP_RELAY is not set
+# BR2_PACKAGE_DHCP_CLIENT is not set
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
@@ -2360,7 +2393,8 @@ BR2_PACKAGE_CRDA=y
 #
 # ejabberd needs erlang, toolchain w/ C++
 #
-# BR2_PACKAGE_ETHTOOL is not set
+BR2_PACKAGE_ETHTOOL=y
+BR2_PACKAGE_ETHTOOL_PRETTY_PRINT=y
 # BR2_PACKAGE_FAIFA is not set
 # BR2_PACKAGE_FAIL2BAN is not set
 # BR2_PACKAGE_FASTD is not set
@@ -2985,7 +3019,8 @@ BR2_PACKAGE_HOST_PATCHELF=y
 # BR2_PACKAGE_HOST_PYTHON_LXML is not set
 # BR2_PACKAGE_HOST_PYTHON_SIX is not set
 # BR2_PACKAGE_HOST_PYTHON_XLRD is not set
-# BR2_PACKAGE_HOST_PYTHON3 is not set
+BR2_PACKAGE_HOST_PYTHON3=y
+BR2_PACKAGE_HOST_PYTHON3_SSL=y
 BR2_PACKAGE_HOST_QEMU_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_SYSTEM_ARCH_SUPPORTS=y
 BR2_PACKAGE_HOST_QEMU_USER_ARCH_SUPPORTS=y
