Added work regarding apt package manager integration in buildroot

--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -2215,6 +2215,7 @@ comment "*                                                      "
 comment "See the manual:                                        "
 comment "http://buildroot.org/manual.html#faq-no-binary-packages"
 comment "-------------------------------------------------------"
+	source "package/apt/Config.in"
 	source "package/opkg/Config.in"
 	source "package/rpm/Config.in"
 endmenu
