Enhancement of sysfs handling for soo

--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-g674de199e7-dirty Configuration
+# Buildroot 2020.02-rc3-gd694a8a21-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -40,6 +40,9 @@ BR2_arm=y
 # BR2_x86_64 is not set
 # BR2_xtensa is not set
 BR2_ARCH_HAS_TOOLCHAIN_BUILDROOT=y
+BR2_ARCH_NEEDS_GCC_AT_LEAST_4_8=y
+BR2_ARCH_NEEDS_GCC_AT_LEAST_4_9=y
+BR2_ARCH_NEEDS_GCC_AT_LEAST_5=y
 BR2_ARCH="arm"
 BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_ABI="aapcs-linux"
@@ -205,7 +208,7 @@ BR2_GLOBAL_PATCH_DIR=""
 #
 # Advanced
 #
-# BR2_COMPILER_PARANOID_UNSAFE_PATH is not set
+BR2_COMPILER_PARANOID_UNSAFE_PATH=y
 # BR2_FORCE_HOST_BUILD is not set
 # BR2_REPRODUCIBLE is not set
 # BR2_PER_PACKAGE_DIRECTORIES is not set
@@ -635,6 +638,8 @@ BR2_PACKAGE_TCF_AGENT_ARCH_SUPPORTS=y
 BR2_PACKAGE_TRINITY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_TRINITY is not set
 # BR2_PACKAGE_UCLIBC_NG_TEST is not set
+BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
+# BR2_PACKAGE_VALGRIND is not set
 # BR2_PACKAGE_VMTOUCH is not set
 # BR2_PACKAGE_WHETSTONE is not set
 
@@ -1401,6 +1406,7 @@ BR2_PACKAGE_PYTHON_PILLOW=y
 # BR2_PACKAGE_PYTHON_REQUESTS_TOOLBELT is not set
 # BR2_PACKAGE_PYTHON_RPI_GPIO is not set
 # BR2_PACKAGE_PYTHON_RPI_WS281X is not set
+# BR2_PACKAGE_PYTHON_RTIMULIB is not set
 # BR2_PACKAGE_PYTHON_RTSLIB_FB is not set
 # BR2_PACKAGE_PYTHON_SCANDIR is not set
 # BR2_PACKAGE_PYTHON_SCAPY is not set
@@ -1409,40 +1415,46 @@ BR2_PACKAGE_PYTHON_PILLOW=y
 # BR2_PACKAGE_PYTHON_SECRETSTORAGE is not set
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
+# BR2_PACKAGE_PYTHON_SENSE_HAT is not set
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
+# BR2_PACKAGE_PYTHON_SERIAL_ASYNCIO is not set
 # BR2_PACKAGE_PYTHON_SERVICE_IDENTITY is not set
 # BR2_PACKAGE_PYTHON_SETPROCTITLE is not set
 BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_SH is not set
 # BR2_PACKAGE_PYTHON_SHUTILWHICH is not set
+# BR2_PACKAGE_PYTHON_SIMPLEAUDIO is not set
 # BR2_PACKAGE_PYTHON_SIMPLEGENERIC is not set
 # BR2_PACKAGE_PYTHON_SIMPLEJSON is not set
 # BR2_PACKAGE_PYTHON_SIMPLELOGGING is not set
 # BR2_PACKAGE_PYTHON_SIMPLESQLITE is not set
-# BR2_PACKAGE_PYTHON_SINGLEDISPATCH is not set
 # BR2_PACKAGE_PYTHON_SIX is not set
+# BR2_PACKAGE_PYTHON_SLOB is not set
 # BR2_PACKAGE_PYTHON_SMBUS_CFFI is not set
 # BR2_PACKAGE_PYTHON_SMMAP2 is not set
 # BR2_PACKAGE_PYTHON_SOCKETIO is not set
+# BR2_PACKAGE_PYTHON_SOCKJS is not set
 # BR2_PACKAGE_PYTHON_SORTEDCONTAINERS is not set
 # BR2_PACKAGE_PYTHON_SOUPSIEVE is not set
 # BR2_PACKAGE_PYTHON_SPIDEV is not set
 # BR2_PACKAGE_PYTHON_SQLALCHEMY is not set
 # BR2_PACKAGE_PYTHON_SQLITESCHEMA is not set
 # BR2_PACKAGE_PYTHON_SQLPARSE is not set
-# BR2_PACKAGE_PYTHON_SUBPROCESS32 is not set
 
 #
 # python-systemd needs systemd
 #
 # BR2_PACKAGE_PYTHON_TABLEDATA is not set
+# BR2_PACKAGE_PYTHON_TEMPORA is not set
 # BR2_PACKAGE_PYTHON_TERMCOLOR is not set
 # BR2_PACKAGE_PYTHON_TERMINALTABLES is not set
 # BR2_PACKAGE_PYTHON_TEXTTABLE is not set
 # BR2_PACKAGE_PYTHON_THRIFT is not set
 # BR2_PACKAGE_PYTHON_TINYRPC is not set
+# BR2_PACKAGE_PYTHON_TOMAKO is not set
 # BR2_PACKAGE_PYTHON_TOML is not set
+# BR2_PACKAGE_PYTHON_TORNADO is not set
 # BR2_PACKAGE_PYTHON_TQDM is not set
 # BR2_PACKAGE_PYTHON_TRAITLETS is not set
 # BR2_PACKAGE_PYTHON_TREQ is not set
@@ -1451,12 +1463,12 @@ BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_TXDBUS is not set
 # BR2_PACKAGE_PYTHON_TXTORCON is not set
 # BR2_PACKAGE_PYTHON_TYPEPY is not set
-# BR2_PACKAGE_PYTHON_TYPING is not set
 # BR2_PACKAGE_PYTHON_U_MSGPACK is not set
 # BR2_PACKAGE_PYTHON_UBJSON is not set
 # BR2_PACKAGE_PYTHON_UJSON is not set
 # BR2_PACKAGE_PYTHON_URLLIB3 is not set
 # BR2_PACKAGE_PYTHON_URWID is not set
+# BR2_PACKAGE_PYTHON_UVLOOP is not set
 # BR2_PACKAGE_PYTHON_VALIDATORS is not set
 # BR2_PACKAGE_PYTHON_VERSIONTOOLS is not set
 # BR2_PACKAGE_PYTHON_VISITOR is not set
@@ -1465,7 +1477,9 @@ BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_WEB2PY is not set
 # BR2_PACKAGE_PYTHON_WEBENCODINGS is not set
 # BR2_PACKAGE_PYTHON_WEBOB is not set
+# BR2_PACKAGE_PYTHON_WEBPY is not set
 # BR2_PACKAGE_PYTHON_WEBSOCKET_CLIENT is not set
+# BR2_PACKAGE_PYTHON_WEBSOCKETS is not set
 # BR2_PACKAGE_PYTHON_WERKZEUG is not set
 # BR2_PACKAGE_PYTHON_WHOOSH is not set
 # BR2_PACKAGE_PYTHON_WRAPT is not set
@@ -1478,8 +1492,9 @@ BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_XLUTILS is not set
 # BR2_PACKAGE_PYTHON_XLWT is not set
 # BR2_PACKAGE_PYTHON_XMLTODICT is not set
-# BR2_PACKAGE_PYTHON_YIELDFROM is not set
+# BR2_PACKAGE_PYTHON_YARL is not set
 # BR2_PACKAGE_PYTHON_ZC_LOCKFILE is not set
+# BR2_PACKAGE_PYTHON_ZEROCONF is not set
 # BR2_PACKAGE_PYTHON_ZOPE_INTERFACE is not set
 # BR2_PACKAGE_RUBY is not set
 # BR2_PACKAGE_TCL is not set
@@ -1624,7 +1639,6 @@ BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_LEVELDB is not set
 # BR2_PACKAGE_LIBGIT2 is not set
 BR2_PACKAGE_MONGODB_ARCH_SUPPORTS=y
-# BR2_PACKAGE_MONGODB is not set
 # BR2_PACKAGE_MYSQL is not set
 # BR2_PACKAGE_POSTGRESQL is not set
 # BR2_PACKAGE_REDIS is not set
@@ -1836,10 +1850,7 @@ BR2_PACKAGE_GNU_EFI_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSERIAL is not set
 # BR2_PACKAGE_LIBSERIALPORT is not set
 # BR2_PACKAGE_LIBSIGROK is not set
-
-#
-# libsigrokdecode is not compatible with python
-#
+# BR2_PACKAGE_LIBSIGROKDECODE is not set
 # BR2_PACKAGE_LIBSOC is not set
 
 #
@@ -1973,6 +1984,7 @@ BR2_PACKAGE_LIBOPENH264_ARCH_SUPPORTS=y
 #
 # batman-adv needs a Linux kernel to be built
 #
+BR2_PACKAGE_BLUEZ5_UTILS_HEADERS=y
 # BR2_PACKAGE_C_ARES is not set
 BR2_PACKAGE_CANFESTIVAL_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CANFESTIVAL is not set
@@ -2341,7 +2353,9 @@ BR2_PACKAGE_QEMU_ARCH_SUPPORTS_TARGET=y
 # BR2_PACKAGE_BANDWIDTHD is not set
 # BR2_PACKAGE_BATCTL is not set
 # BR2_PACKAGE_BCUSDK is not set
-# BR2_PACKAGE_BIND is not set
+BR2_PACKAGE_BIND=y
+# BR2_PACKAGE_BIND_SERVER is not set
+# BR2_PACKAGE_BIND_TOOLS is not set
 # BR2_PACKAGE_BIRD is not set
 # BR2_PACKAGE_BLUEZ_TOOLS is not set
 BR2_PACKAGE_BLUEZ5_UTILS=y
@@ -2671,6 +2685,7 @@ BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 #
 # -------------------------------------------------------
 #
+# BR2_PACKAGE_APT is not set
 # BR2_PACKAGE_OPKG is not set
 # BR2_PACKAGE_RPM is not set
 
@@ -2711,7 +2726,7 @@ BR2_PACKAGE_BASH=y
 # Utilities
 #
 # BR2_PACKAGE_AT is not set
-# BR2_PACKAGE_BASH_COMPLETION is not set
+BR2_PACKAGE_BASH_COMPLETION=y
 BR2_PACKAGE_AUTO_GETTY_SUPPORT=y
 BR2_PACKAGE_AUTO_GETTY=y
 BR2_PACKAGE_AUTO_GETTY_ROOT_LOGIN=y
@@ -2751,10 +2766,7 @@ BR2_PACKAGE_AUDIT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_AUDIT is not set
 # BR2_PACKAGE_BUBBLEWRAP is not set
 # BR2_PACKAGE_CGROUPFS_MOUNT is not set
-
-#
-# circus needs Python 3 and a toolchain w/ C++, threads
-#
+# BR2_PACKAGE_CIRCUS is not set
 # BR2_PACKAGE_COREUTILS is not set
 # BR2_PACKAGE_CPULOAD is not set
 # BR2_PACKAGE_DAEMON is not set
@@ -3554,7 +3566,6 @@ BR2_TARGET_UBOOT_CUSTOM_PATCH_DIR=""
 # BR2_PACKAGE_PERF is not set
 # BR2_BINUTILS_VERSION_2_22 is not set
 # BR2_PACKAGE_GPU_VIV_BIN_MX6Q is not set
-# BR2_PACKAGE_LIBSEMANAGE_PYTHON_BINDINGS is not set
 # BR2_TARGET_UBOOT_NETWORK is not set
 
 #
