Cleaning and added sense-hat-emu (vExpress) - not working yet

--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-gd694a8a21-dirty Configuration
+# Buildroot 2020.02-rc3-gb5b926d12-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -40,9 +40,6 @@ BR2_arm=y
 # BR2_x86_64 is not set
 # BR2_xtensa is not set
 BR2_ARCH_HAS_TOOLCHAIN_BUILDROOT=y
-BR2_ARCH_NEEDS_GCC_AT_LEAST_4_8=y
-BR2_ARCH_NEEDS_GCC_AT_LEAST_4_9=y
-BR2_ARCH_NEEDS_GCC_AT_LEAST_5=y
 BR2_ARCH="arm"
 BR2_ENDIAN="LITTLE"
 BR2_GCC_TARGET_ABI="aapcs-linux"
@@ -1317,6 +1314,7 @@ BR2_PACKAGE_PYTHON3_ZLIB=y
 # BR2_PACKAGE_PYTHON_NESTED_DICT is not set
 # BR2_PACKAGE_PYTHON_NETADDR is not set
 # BR2_PACKAGE_PYTHON_NETIFACES is not set
+# BR2_PACKAGE_PYTHON_NETWORKMANAGER is not set
 # BR2_PACKAGE_PYTHON_NETWORKX is not set
 BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 BR2_PACKAGE_PYTHON_NUMPY=y
@@ -1595,7 +1593,9 @@ BR2_PACKAGE_BOTAN_ARCH_SUPPORTS=y
 # cryptodev needs a Linux kernel to be built
 #
 # BR2_PACKAGE_GCR is not set
-# BR2_PACKAGE_GNUTLS is not set
+BR2_PACKAGE_GNUTLS=y
+# BR2_PACKAGE_GNUTLS_OPENSSL is not set
+# BR2_PACKAGE_GNUTLS_TOOLS is not set
 # BR2_PACKAGE_LIBARGON2 is not set
 # BR2_PACKAGE_LIBASSUAN is not set
 BR2_PACKAGE_LIBGCRYPT=y
@@ -1619,7 +1619,7 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBTOMCRYPT is not set
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
-# BR2_PACKAGE_NETTLE is not set
+BR2_PACKAGE_NETTLE=y
 # BR2_PACKAGE_OPENSSL is not set
 BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
@@ -2018,6 +2018,7 @@ BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBCURL_PROXY_SUPPORT=y
 BR2_PACKAGE_LIBCURL_COOKIES_SUPPORT=y
 BR2_PACKAGE_LIBCURL_EXTRA_PROTOCOLS_FEATURES=y
+# BR2_PACKAGE_LIBCURL_GNUTLS is not set
 BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBDNET is not set
 # BR2_PACKAGE_LIBEXOSIP2 is not set
@@ -2040,7 +2041,7 @@ BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBMODBUS is not set
 # BR2_PACKAGE_LIBMODSECURITY is not set
 # BR2_PACKAGE_LIBNATPMP is not set
-# BR2_PACKAGE_LIBNDP is not set
+BR2_PACKAGE_LIBNDP=y
 # BR2_PACKAGE_LIBNET is not set
 # BR2_PACKAGE_LIBNETCONF2 is not set
 # BR2_PACKAGE_LIBNETFILTER_ACCT is not set
@@ -2148,7 +2149,7 @@ BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GLI is not set
 # BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GLM is not set
-# BR2_PACKAGE_GMP is not set
+BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
@@ -2200,7 +2201,7 @@ BR2_PACKAGE_LIBSECCOMP_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBSIGSEGV_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSIGSEGV is not set
 # BR2_PACKAGE_LIBSPATIALINDEX is not set
-# BR2_PACKAGE_LIBTASN1 is not set
+BR2_PACKAGE_LIBTASN1=y
 # BR2_PACKAGE_LIBTOMMATH is not set
 # BR2_PACKAGE_LIBTPL is not set
 # BR2_PACKAGE_LIBUBOX is not set
@@ -2396,7 +2397,7 @@ BR2_PACKAGE_CRDA=y
 BR2_PACKAGE_DHCP=y
 # BR2_PACKAGE_DHCP_SERVER is not set
 # BR2_PACKAGE_DHCP_RELAY is not set
-# BR2_PACKAGE_DHCP_CLIENT is not set
+BR2_PACKAGE_DHCP_CLIENT=y
 # BR2_PACKAGE_DHCPCD is not set
 # BR2_PACKAGE_DHCPDUMP is not set
 # BR2_PACKAGE_DNSMASQ is not set
@@ -2503,7 +2504,11 @@ BR2_PACKAGE_NETCAT=y
 # BR2_PACKAGE_NETPLUG is not set
 # BR2_PACKAGE_NETSNMP is not set
 # BR2_PACKAGE_NETSTAT_NAT is not set
-# BR2_PACKAGE_NETWORK_MANAGER is not set
+BR2_PACKAGE_NETWORK_MANAGER=y
+# BR2_PACKAGE_NETWORK_MANAGER_TUI is not set
+# BR2_PACKAGE_NETWORK_MANAGER_MODEM_MANAGER is not set
+# BR2_PACKAGE_NETWORK_MANAGER_PPPD is not set
+# BR2_PACKAGE_NETWORK_MANAGER_OVS is not set
 # BR2_PACKAGE_NFACCT is not set
 # BR2_PACKAGE_NFTABLES is not set
 # BR2_PACKAGE_NGINX is not set
@@ -2614,7 +2619,7 @@ BR2_PACKAGE_NETCAT=y
 # BR2_PACKAGE_WIREGUARD_TOOLS is not set
 BR2_PACKAGE_WIRELESS_REGDB=y
 BR2_PACKAGE_WIRELESS_TOOLS=y
-# BR2_PACKAGE_WIRELESS_TOOLS_LIB is not set
+BR2_PACKAGE_WIRELESS_TOOLS_LIB=y
 # BR2_PACKAGE_WIRESHARK is not set
 BR2_PACKAGE_WPA_SUPPLICANT=y
 BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
@@ -2685,7 +2690,6 @@ BR2_PACKAGE_WPA_SUPPLICANT_NL80211=y
 #
 # -------------------------------------------------------
 #
-# BR2_PACKAGE_APT is not set
 # BR2_PACKAGE_OPKG is not set
 # BR2_PACKAGE_RPM is not set
 
