--- a/agency/rootfs/configs/vexpress_gui_defconfig
+++ b/agency/rootfs/configs/vexpress_gui_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-gf16afb3ae7-dirty Configuration
+# Buildroot 2020.02-rc3-gb5b926d12-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -442,7 +442,8 @@ BR2_ROOTFS_USERS_TABLES=""
 BR2_ROOTFS_OVERLAY="$(BASE_DIR)/board/common/rootfs_overlay/ $(BASE_DIR)/board/vexpress/rootfs_overlay/"
 BR2_ROOTFS_POST_BUILD_SCRIPT=""
 BR2_ROOTFS_POST_FAKEROOT_SCRIPT=""
-BR2_ROOTFS_POST_IMAGE_SCRIPT=""
+BR2_ROOTFS_POST_IMAGE_SCRIPT="$(BASE_DIR)/board/vexpress/post_image.sh"
+BR2_ROOTFS_POST_SCRIPT_ARGS=""
 
 #
 # Kernel
@@ -457,7 +458,8 @@ BR2_PACKAGE_BUSYBOX_CONFIG="package/busybox/busybox.config"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES=""
 BR2_PACKAGE_BUSYBOX_SHOW_OTHERS=y
 # BR2_PACKAGE_BUSYBOX_INDIVIDUAL_BINARIES is not set
-# BR2_PACKAGE_BUSYBOX_WATCHDOG is not set
+BR2_PACKAGE_BUSYBOX_WATCHDOG=y
+BR2_PACKAGE_BUSYBOX_WATCHDOG_PERIOD="5"
 BR2_PACKAGE_SKELETON=y
 BR2_PACKAGE_HAS_SKELETON=y
 BR2_PACKAGE_PROVIDES_SKELETON="skeleton-init-sysv"
@@ -519,9 +521,7 @@ BR2_PACKAGE_KODI_ARCH_SUPPORTS=y
 #
 # BR2_PACKAGE_OPUS_TOOLS is not set
 BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
-BR2_PACKAGE_PULSEAUDIO_ENABLE_ATOMIC=y
-BR2_PACKAGE_PULSEAUDIO=y
-# BR2_PACKAGE_PULSEAUDIO_DAEMON is not set
+# BR2_PACKAGE_PULSEAUDIO is not set
 # BR2_PACKAGE_SOX is not set
 # BR2_PACKAGE_SQUEEZELITE is not set
 # BR2_PACKAGE_TOVID is not set
@@ -547,7 +547,7 @@ BR2_PACKAGE_PULSEAUDIO=y
 # BR2_PACKAGE_BZIP2 is not set
 # BR2_PACKAGE_GZIP is not set
 # BR2_PACKAGE_LRZIP is not set
-BR2_PACKAGE_LZ4=y
+# BR2_PACKAGE_LZ4 is not set
 # BR2_PACKAGE_LZIP is not set
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
@@ -647,7 +647,7 @@ BR2_PACKAGE_VALGRIND_ARCH_SUPPORTS=y
 # BR2_PACKAGE_BINUTILS is not set
 # BR2_PACKAGE_BSDIFF is not set
 # BR2_PACKAGE_BUSTLE is not set
-# BR2_PACKAGE_CHECK is not set
+BR2_PACKAGE_CHECK=y
 BR2_PACKAGE_CMAKE_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CMAKE_CTEST is not set
 # BR2_PACKAGE_CPPUNIT is not set
@@ -1504,7 +1504,7 @@ BR2_PACKAGE_PYTHON3_UNICODEDATA=y
 BR2_PACKAGE_PYTHON3_SQLITE=y
 BR2_PACKAGE_PYTHON3_PYEXPAT=y
 # BR2_PACKAGE_PYTHON3_XZ is not set
-# BR2_PACKAGE_PYTHON3_ZLIB is not set
+BR2_PACKAGE_PYTHON3_ZLIB=y
 
 #
 # External python modules
@@ -1668,7 +1668,7 @@ BR2_PACKAGE_PYTHON3_PYEXPAT=y
 # BR2_PACKAGE_PYTHON_NETIFACES is not set
 # BR2_PACKAGE_PYTHON_NETWORKX is not set
 BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
-# BR2_PACKAGE_PYTHON_NUMPY is not set
+BR2_PACKAGE_PYTHON_NUMPY=y
 # BR2_PACKAGE_PYTHON_OAUTHLIB is not set
 # BR2_PACKAGE_PYTHON_PAHO_MQTT is not set
 # BR2_PACKAGE_PYTHON_PARAMIKO is not set
@@ -1681,7 +1681,7 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_PEXPECT is not set
 # BR2_PACKAGE_PYTHON_PICKLESHARE is not set
 # BR2_PACKAGE_PYTHON_PIGPIO is not set
-# BR2_PACKAGE_PYTHON_PILLOW is not set
+BR2_PACKAGE_PYTHON_PILLOW=y
 # BR2_PACKAGE_PYTHON_PIP is not set
 # BR2_PACKAGE_PYTHON_PLY is not set
 # BR2_PACKAGE_PYTHON_PORTEND is not set
@@ -1755,6 +1755,7 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_REQUESTS_TOOLBELT is not set
 # BR2_PACKAGE_PYTHON_RPI_GPIO is not set
 # BR2_PACKAGE_PYTHON_RPI_WS281X is not set
+BR2_PACKAGE_PYTHON_RTIMULIB=y
 # BR2_PACKAGE_PYTHON_RTSLIB_FB is not set
 # BR2_PACKAGE_PYTHON_SCANDIR is not set
 # BR2_PACKAGE_PYTHON_SCAPY is not set
@@ -1763,12 +1764,14 @@ BR2_PACKAGE_PYTHON_NUMPY_ARCH_SUPPORTS=y
 # BR2_PACKAGE_PYTHON_SECRETSTORAGE is not set
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
+# BR2_PACKAGE_PYTHON_SENSE_HAT is not set
+BR2_PACKAGE_PYTHON_SENSE_EMU=y
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SERIAL_ASYNCIO is not set
 # BR2_PACKAGE_PYTHON_SERVICE_IDENTITY is not set
 # BR2_PACKAGE_PYTHON_SETPROCTITLE is not set
-# BR2_PACKAGE_PYTHON_SETUPTOOLS is not set
+BR2_PACKAGE_PYTHON_SETUPTOOLS=y
 # BR2_PACKAGE_PYTHON_SH is not set
 # BR2_PACKAGE_PYTHON_SHUTILWHICH is not set
 # BR2_PACKAGE_PYTHON_SIMPLEAUDIO is not set
