--- a/buildroot/package/Config.in
+++ b/buildroot/package/Config.in
@@ -1115,6 +1115,7 @@ menu "External python modules"
 	source "package/python-see/Config.in"
 	source "package/python-semver/Config.in"
 	source "package/python-sense-hat/Config.in"
+	source "package/python-sense-emu/Config.in"
 	source "package/python-sentry-sdk/Config.in"
 	source "package/python-serial/Config.in"
 	source "package/python-serial-asyncio/Config.in"
