--- a/agency/rootfs/configs/rpi4_defconfig
+++ b/agency/rootfs/configs/rpi4_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-gbedb121af-dirty Configuration
+# Buildroot 2020.02-rc3-g22a9f4a25-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -554,19 +554,19 @@ BR2_PACKAGE_PULSEAUDIO_HAS_ATOMIC=y
 # Compressors and decompressors
 #
 # BR2_PACKAGE_BROTLI is not set
-# BR2_PACKAGE_BZIP2 is not set
-# BR2_PACKAGE_GZIP is not set
+BR2_PACKAGE_BZIP2=y
+BR2_PACKAGE_GZIP=y
 # BR2_PACKAGE_LRZIP is not set
-# BR2_PACKAGE_LZ4 is not set
-# BR2_PACKAGE_LZIP is not set
+BR2_PACKAGE_LZ4=y
+BR2_PACKAGE_LZIP=y
 # BR2_PACKAGE_LZOP is not set
 # BR2_PACKAGE_P7ZIP is not set
 # BR2_PACKAGE_PIGZ is not set
 # BR2_PACKAGE_PIXZ is not set
 # BR2_PACKAGE_UNRAR is not set
 # BR2_PACKAGE_UNZIP is not set
-# BR2_PACKAGE_XZ is not set
-# BR2_PACKAGE_ZIP is not set
+BR2_PACKAGE_XZ=y
+BR2_PACKAGE_ZIP=y
 # BR2_PACKAGE_ZSTD is not set
 
 #
@@ -1130,7 +1130,117 @@ BR2_PACKAGE_OPENJDK_ARCH_SUPPORTS=y
 #
 # openjdk needs X.Org
 #
-# BR2_PACKAGE_PERL is not set
+BR2_PACKAGE_PERL=y
+BR2_PACKAGE_PERL_MODULES=""
+
+#
+# Perl libraries/modules
+#
+# BR2_PACKAGE_PERL_APACHE_LOGFORMAT_COMPILER is not set
+# BR2_PACKAGE_PERL_APPCONFIG is not set
+# BR2_PACKAGE_PERL_ASTRO_SUNTIME is not set
+# BR2_PACKAGE_PERL_CLASS_INSPECTOR is not set
+# BR2_PACKAGE_PERL_CLASS_LOAD is not set
+# BR2_PACKAGE_PERL_CLASS_METHOD_MODIFIERS is not set
+# BR2_PACKAGE_PERL_CLASS_STD is not set
+# BR2_PACKAGE_PERL_CLASS_STD_FAST is not set
+# BR2_PACKAGE_PERL_CONVERT_ASN1 is not set
+# BR2_PACKAGE_PERL_COOKIE_BAKER is not set
+# BR2_PACKAGE_PERL_CRYPT_BLOWFISH is not set
+# BR2_PACKAGE_PERL_CRYPT_CBC is not set
+# BR2_PACKAGE_PERL_CRYPT_OPENSSL_AES is not set
+# BR2_PACKAGE_PERL_CRYPT_OPENSSL_RANDOM is not set
+# BR2_PACKAGE_PERL_CRYPT_OPENSSL_RSA is not set
+# BR2_PACKAGE_PERL_DATA_DUMP is not set
+# BR2_PACKAGE_PERL_DATA_OPTLIST is not set
+# BR2_PACKAGE_PERL_DATA_UUID is not set
+# BR2_PACKAGE_PERL_DATE_MANIP is not set
+# BR2_PACKAGE_PERL_DATETIME_TINY is not set
+# BR2_PACKAGE_PERL_DBD_MYSQL is not set
+# BR2_PACKAGE_PERL_DBI is not set
+# BR2_PACKAGE_PERL_DEVEL_GLOBALDESTRUCTION is not set
+# BR2_PACKAGE_PERL_DEVEL_STACKTRACE is not set
+# BR2_PACKAGE_PERL_DEVEL_STACKTRACE_ASHTML is not set
+# BR2_PACKAGE_PERL_DEVICE_SERIALPORT is not set
+# BR2_PACKAGE_PERL_DIGEST_HMAC is not set
+# BR2_PACKAGE_PERL_DIGEST_SHA1 is not set
+# BR2_PACKAGE_PERL_DIST_CHECKCONFLICTS is not set
+# BR2_PACKAGE_PERL_ENCODE_DETECT is not set
+# BR2_PACKAGE_PERL_ENCODE_LOCALE is not set
+# BR2_PACKAGE_PERL_EXPORTER_TINY is not set
+# BR2_PACKAGE_PERL_FILE_LISTING is not set
+# BR2_PACKAGE_PERL_FILE_SHAREDIR is not set
+# BR2_PACKAGE_PERL_FILE_SLURP is not set
+# BR2_PACKAGE_PERL_FILE_UTIL is not set
+# BR2_PACKAGE_PERL_FILESYS_NOTIFY_SIMPLE is not set
+# BR2_PACKAGE_PERL_GD is not set
+# BR2_PACKAGE_PERL_GDGRAPH is not set
+# BR2_PACKAGE_PERL_GDTEXTUTIL is not set
+# BR2_PACKAGE_PERL_HASH_MULTIVALUE is not set
+# BR2_PACKAGE_PERL_HTML_PARSER is not set
+# BR2_PACKAGE_PERL_HTML_TAGSET is not set
+# BR2_PACKAGE_PERL_HTTP_COOKIES is not set
+# BR2_PACKAGE_PERL_HTTP_DAEMON is not set
+# BR2_PACKAGE_PERL_HTTP_DATE is not set
+# BR2_PACKAGE_PERL_HTTP_ENTITY_PARSER is not set
+# BR2_PACKAGE_PERL_HTTP_HEADERS_FAST is not set
+# BR2_PACKAGE_PERL_HTTP_MESSAGE is not set
+# BR2_PACKAGE_PERL_HTTP_MULTIPARTPARSER is not set
+# BR2_PACKAGE_PERL_HTTP_NEGOTIATE is not set
+# BR2_PACKAGE_PERL_IO_HTML is not set
+# BR2_PACKAGE_PERL_IO_INTERFACE is not set
+# BR2_PACKAGE_PERL_IO_SOCKET_MULTICAST is not set
+# BR2_PACKAGE_PERL_IO_SOCKET_SSL is not set
+# BR2_PACKAGE_PERL_JSON_MAYBEXS is not set
+# BR2_PACKAGE_PERL_JSON_TINY is not set
+# BR2_PACKAGE_PERL_LIBWWW_PERL is not set
+# BR2_PACKAGE_PERL_LWP_MEDIATYPES is not set
+# BR2_PACKAGE_PERL_MAIL_DKIM is not set
+# BR2_PACKAGE_PERL_MAILTOOLS is not set
+# BR2_PACKAGE_PERL_MATH_PRIME_UTIL is not set
+# BR2_PACKAGE_PERL_MIME_BASE64_URLSAFE is not set
+# BR2_PACKAGE_PERL_MIME_TOOLS is not set
+# BR2_PACKAGE_PERL_MODULE_IMPLEMENTATION is not set
+# BR2_PACKAGE_PERL_MODULE_RUNTIME is not set
+# BR2_PACKAGE_PERL_MOJOLICIOUS is not set
+# BR2_PACKAGE_PERL_MOJOLICIOUS_PLUGIN_AUTHENTICATION is not set
+# BR2_PACKAGE_PERL_MOO is not set
+# BR2_PACKAGE_PERL_NET_DNS is not set
+# BR2_PACKAGE_PERL_NET_HTTP is not set
+# BR2_PACKAGE_PERL_NET_SNMP is not set
+
+#
+# perl-net-ssh2 needs libssh2 with OpenSSL or Libgcrypt backend
+#
+# BR2_PACKAGE_PERL_NET_SSLEAY is not set
+# BR2_PACKAGE_PERL_NET_TELNET is not set
+# BR2_PACKAGE_PERL_NETADDR_IP is not set
+# BR2_PACKAGE_PERL_NUMBER_BYTES_HUMAN is not set
+# BR2_PACKAGE_PERL_PACKAGE_STASH is not set
+# BR2_PACKAGE_PERL_PARAMS_UTIL is not set
+# BR2_PACKAGE_PERL_PATH_TINY is not set
+# BR2_PACKAGE_PERL_PLACK is not set
+# BR2_PACKAGE_PERL_POSIX_STRFTIME_COMPILER is not set
+# BR2_PACKAGE_PERL_ROLE_TINY is not set
+# BR2_PACKAGE_PERL_STREAM_BUFFERED is not set
+# BR2_PACKAGE_PERL_SUB_EXPORTER_PROGRESSIVE is not set
+# BR2_PACKAGE_PERL_SUB_INSTALL is not set
+# BR2_PACKAGE_PERL_SUB_QUOTE is not set
+# BR2_PACKAGE_PERL_SYS_CPU is not set
+# BR2_PACKAGE_PERL_SYS_MEMINFO is not set
+# BR2_PACKAGE_PERL_SYS_MMAP is not set
+# BR2_PACKAGE_PERL_TIME_PARSEDATE is not set
+# BR2_PACKAGE_PERL_TIMEDATE is not set
+# BR2_PACKAGE_PERL_TRY_TINY is not set
+# BR2_PACKAGE_PERL_TYPE_TINY is not set
+# BR2_PACKAGE_PERL_URI is not set
+# BR2_PACKAGE_PERL_WWW_FORM_URLENCODED is not set
+# BR2_PACKAGE_PERL_WWW_ROBOTRULES is not set
+# BR2_PACKAGE_PERL_X10 is not set
+# BR2_PACKAGE_PERL_XML_LIBXML is not set
+# BR2_PACKAGE_PERL_XML_NAMESPACESUPPORT is not set
+# BR2_PACKAGE_PERL_XML_SAX is not set
+# BR2_PACKAGE_PERL_XML_SAX_BASE is not set
 # BR2_PACKAGE_PHP is not set
 # BR2_PACKAGE_PYTHON is not set
 BR2_PACKAGE_PYTHON3=y
@@ -1417,6 +1527,7 @@ BR2_PACKAGE_PYTHON_RTIMULIB=y
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
 BR2_PACKAGE_PYTHON_SENSE_HAT=y
+BR2_PACKAGE_PYTHON_SENSE_EMU=y
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SERIAL_ASYNCIO is not set
@@ -1596,7 +1707,9 @@ BR2_PACKAGE_BOTAN_ARCH_SUPPORTS=y
 # cryptodev needs a Linux kernel to be built
 #
 # BR2_PACKAGE_GCR is not set
-# BR2_PACKAGE_GNUTLS is not set
+BR2_PACKAGE_GNUTLS=y
+BR2_PACKAGE_GNUTLS_OPENSSL=y
+# BR2_PACKAGE_GNUTLS_TOOLS is not set
 # BR2_PACKAGE_LIBARGON2 is not set
 # BR2_PACKAGE_LIBASSUAN is not set
 BR2_PACKAGE_LIBGCRYPT=y
@@ -1620,7 +1733,7 @@ BR2_PACKAGE_LIBGPG_ERROR_SYSCFG="arm-unknown-linux-gnueabi"
 # BR2_PACKAGE_LIBTOMCRYPT is not set
 # BR2_PACKAGE_LIBUECC is not set
 # BR2_PACKAGE_MBEDTLS is not set
-# BR2_PACKAGE_NETTLE is not set
+BR2_PACKAGE_NETTLE=y
 # BR2_PACKAGE_OPENSSL is not set
 BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 # BR2_PACKAGE_RHASH is not set
@@ -1633,7 +1746,9 @@ BR2_PACKAGE_PROVIDES_HOST_OPENSSL="host-libopenssl"
 #
 # Database
 #
-# BR2_PACKAGE_BERKELEYDB is not set
+BR2_PACKAGE_BERKELEYDB=y
+# BR2_PACKAGE_BERKELEYDB_COMPAT185 is not set
+# BR2_PACKAGE_BERKELEYDB_TOOLS is not set
 # BR2_PACKAGE_GDBM is not set
 # BR2_PACKAGE_HIREDIS is not set
 # BR2_PACKAGE_KOMPEXSQLITE is not set
@@ -1906,10 +2021,10 @@ BR2_PACKAGE_EXPAT=y
 # BR2_PACKAGE_LIBJSON is not set
 # BR2_PACKAGE_LIBROXML is not set
 # BR2_PACKAGE_LIBUCL is not set
-# BR2_PACKAGE_LIBXML2 is not set
+BR2_PACKAGE_LIBXML2=y
 # BR2_PACKAGE_LIBXMLPP is not set
 # BR2_PACKAGE_LIBXMLRPC is not set
-# BR2_PACKAGE_LIBXSLT is not set
+BR2_PACKAGE_LIBXSLT=y
 # BR2_PACKAGE_LIBYAML is not set
 # BR2_PACKAGE_MXML is not set
 # BR2_PACKAGE_PUGIXML is not set
@@ -2019,6 +2134,7 @@ BR2_PACKAGE_LIBCURL=y
 BR2_PACKAGE_LIBCURL_PROXY_SUPPORT=y
 BR2_PACKAGE_LIBCURL_COOKIES_SUPPORT=y
 BR2_PACKAGE_LIBCURL_EXTRA_PROTOCOLS_FEATURES=y
+# BR2_PACKAGE_LIBCURL_GNUTLS is not set
 BR2_PACKAGE_LIBCURL_TLS_NONE=y
 # BR2_PACKAGE_LIBDNET is not set
 # BR2_PACKAGE_LIBEXOSIP2 is not set
@@ -2149,7 +2265,7 @@ BR2_PACKAGE_CLASSPATH_ARCH_SUPPORTS=y
 # BR2_PACKAGE_GLI is not set
 # BR2_PACKAGE_GLIBMM is not set
 # BR2_PACKAGE_GLM is not set
-# BR2_PACKAGE_GMP is not set
+BR2_PACKAGE_GMP=y
 # BR2_PACKAGE_GSL is not set
 # BR2_PACKAGE_GTEST is not set
 BR2_PACKAGE_JEMALLOC_ARCH_SUPPORTS=y
@@ -2201,7 +2317,7 @@ BR2_PACKAGE_LIBSECCOMP_ARCH_SUPPORTS=y
 BR2_PACKAGE_LIBSIGSEGV_ARCH_SUPPORTS=y
 # BR2_PACKAGE_LIBSIGSEGV is not set
 # BR2_PACKAGE_LIBSPATIALINDEX is not set
-# BR2_PACKAGE_LIBTASN1 is not set
+BR2_PACKAGE_LIBTASN1=y
 # BR2_PACKAGE_LIBTOMMATH is not set
 # BR2_PACKAGE_LIBTPL is not set
 # BR2_PACKAGE_LIBUBOX is not set
