Experimentation on 'Secure Storage TA'
Add Support in Kernel and user-space support for 'Secure Storage
TA'. Comments:
* Experiment is done using 'Hello World' TA available in
  optee_examples git
* The tee-supplicant has to run but it is not provided by this
  commit

--- a/agency/usr/apps/Makefile
+++ b/agency/usr/apps/Makefile
@@ -10,10 +10,10 @@ apps_final: apps_build
 
 apps_build:
 # Smart Object specific apps
-#ifeq ($(CONFIG_app),y)
-#	make -C <app>
-#endif
+ifeq ($(CONFIG_ASF),y)
+	make -C asf_usr
+endif
 
 clean:
-	#$(Q)make -C <app> clean
 	$(Q)echo "Cleaning apps completed"
+	$(Q)make -C asf_usr clean
