--- a/agency/usr/apps/Kconfig
+++ b/agency/usr/apps/Kconfig
@@ -2,3 +2,10 @@
 menuconfig WEATHER
     default n
 	bool "Weather data parser (SOO.outdoor)"
+
+
+config ASF
+	bool "ASF support usr app"
+	default n
+	help
+	   ASF appliction. Use to send TA to secure storage
