[rootfs] Add Optee_client to the different configuration

--- a/agency/rootfs/configs/rpi3_gui_defconfig
+++ b/agency/rootfs/configs/rpi3_gui_defconfig
@@ -3162,7 +3162,7 @@ BR2_PACKAGE_XENOMAI_COBALT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CHECKPOLICY is not set
 # BR2_PACKAGE_IMA_EVM_UTILS is not set
 # BR2_PACKAGE_OPTEE_BENCHMARK is not set
-# BR2_PACKAGE_OPTEE_CLIENT is not set
+BR2_PACKAGE_OPTEE_CLIENT=y
 # BR2_PACKAGE_PAXTEST is not set
 # BR2_PACKAGE_POLICYCOREUTILS is not set
 # BR2_PACKAGE_REFPOLICY is not set
