--- a/agency/rootfs/configs/vexpress_defconfig
+++ b/agency/rootfs/configs/vexpress_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Buildroot 2020.02-rc3-gb5b926d12-dirty Configuration
+# Buildroot 2020.02-rc3-g6b7644e22-dirty Configuration
 #
 BR2_HAVE_DOT_CONFIG=y
 BR2_HOST_GCC_AT_LEAST_4_9=y
@@ -1414,6 +1414,7 @@ BR2_PACKAGE_PYTHON_PILLOW=y
 # BR2_PACKAGE_PYTHON_SEE is not set
 # BR2_PACKAGE_PYTHON_SEMVER is not set
 # BR2_PACKAGE_PYTHON_SENSE_HAT is not set
+# BR2_PACKAGE_PYTHON_SENSE_EMU is not set
 # BR2_PACKAGE_PYTHON_SENTRY_SDK is not set
 # BR2_PACKAGE_PYTHON_SERIAL is not set
 # BR2_PACKAGE_PYTHON_SERIAL_ASYNCIO is not set
@@ -2705,7 +2706,7 @@ BR2_PACKAGE_XENOMAI_COBALT_ARCH_SUPPORTS=y
 # BR2_PACKAGE_CHECKPOLICY is not set
 # BR2_PACKAGE_IMA_EVM_UTILS is not set
 # BR2_PACKAGE_OPTEE_BENCHMARK is not set
-# BR2_PACKAGE_OPTEE_CLIENT is not set
+BR2_PACKAGE_OPTEE_CLIENT=y
 # BR2_PACKAGE_PAXTEST is not set
 # BR2_PACKAGE_POLICYCOREUTILS is not set
 # BR2_PACKAGE_REFPOLICY is not set
