[usr] Add test app for hello_world TA

--- a/agency/usr/apps/Kconfig
+++ b/agency/usr/apps/Kconfig
@@ -8,4 +8,12 @@ config ASF
 	bool "ASF support usr app"
 	default n
 	help
-	   ASF appliction. Use to send TA to secure storage
+	   ASF application. Use to send TA to secure storage
+
+
+config HELLO_WORLD_TA_TST
+	bool "Hello World TA test app"
+	default n
+	help
+	   Application used to test Hello World TA.
+
