[usr] Rename hello_world_ta_tst in asf_ta_tst & Add crypto test

--- a/agency/usr/configs/agency_defconfig
+++ b/agency/usr/configs/agency_defconfig
@@ -14,6 +14,8 @@ CONFIG_MIGRATION_CYCLE_FREQ=1
 # CONFIG_LEDS is not set
 CONFIG_DCM=y
 # CONFIG_WEATHER is not set
+CONFIG_ASF=y
+CONFIG_ASF_TA_TST=y
 
 #
 # Library Configuration
