--- a/agency/usr/apps/Kconfig
+++ b/agency/usr/apps/Kconfig
@@ -11,9 +11,9 @@ config ASF
 	   ASF application. Use to send TA to secure storage
 
 
-config HELLO_WORLD_TA_TST
-	bool "Hello World TA test app"
+config ASF_TA_TST
+	bool "ASF TA test app"
 	default n
 	help
-	   Application used to test Hello World TA.
+	   Application used to test ASF TA.
 
